--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <div class="container">
-    <div class="title">Register Here!</div>
+    <div class="title">Hi Register Here!</div>
     <div class="content">
       <form action="#">
         <span class="heading">Team and Team Leader Details</span>
